--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,10 @@ ultralytics>=8.0.0  # YOLOv8 for object detection
 torch>=2.0.0        # PyTorch backend for YOLO
 torchvision>=0.15.0
 
+# Feature extraction and analysis dependencies
+scikit-learn>=1.3.0  # For cosine similarity and other metrics
+scipy>=1.11.0        # For distance calculations and advanced math
+
 # Data handling
 pathlib2>=2.3.0
 dataclasses-json>=0.5.0
