--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 # Core dependencies for video processing pipeline
 opencv-python>=4.8.0
-numpy>=1.24.0
+numpy>=1.24.0,<2.0.0  # Keep NumPy < 2.0 for compatibility with numba/tigramite
 Pillow>=10.0.0
 
 # Object detection dependencies
@@ -15,6 +15,10 @@ scipy>=1.11.0        # For distance calculations and advanced math
 # Data handling
 pathlib2>=2.3.0
 dataclasses-json>=0.5.0
+
+# Causal discovery dependencies
+tigramite>=4.2.0    # For causal discovery and time series analysis
+numba>=0.56.0       # Required by tigramite for performance optimization
 
 # Optional: for advanced object detection models
 # tensorflow>=2.13.0
