--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ dataset_mini/
 dataset/driving-video-with-object-tracking
 external/
 output/
+dataset/
+
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
